# AprendizajeProfundoGrupo8

./: .gitignore  Embeddings.ipynb  MeLi challenge.ipynb  README.md  pyproject.toml
models/: cnn.py  mlp.py  mlp_flat.py  naive.py
utils/: embeddings.py  loader.py  params.py  utils.py
