[tool.poetry]
name = "diplodatos"
version = "0.1.0"
description = ""
authors = ["Juan Alvarez <juan@sytex.io>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
pandas = "^1.3.3"
seaborn = "^0.11.2"
tensorflow = "^2.6.0"
xgboost = "^1.4.2"
mlflow = "^1.20.2"
opencv-python = "^3.4.15"
tensorflow-hub = "^0.12.0"
surprise = "^0.1"
plotly = "^5.3.1"
torch = "^1.9.1"
gensim = "^4.1.2"
torchvision = "^0.10.1"
jsonlines = "^2.0.0"
pytorch-lightning = "^1.5.3"
nltk = "^3.6.5"
torchmetrics = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
